<resources>
    <string name="app_name">Favqs</string>

    <!-- Login -->
    <string name="login">Login</string>
    <string name="email_address">Email address</string>
    <string name="no_account_signup">Don\'t have an account? Sign Up</string>
    <string name="welcome_message">Welcome back.\nLog in to continue with app.</string>
    <string name="password">Password</string>
    <string name="invalid_email_address">Email is invalid.</string>
    <string name="invalid_password_address">Password should be minimum 5 characters.</string>

    <!-- Register -->
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="invalid_username">Username should be minimum 5 characters.</string>
    <string name="home">Home</string>
    <string name="listing">List</string>
    <string name="logout">Logout</string>

    <!-- Home -->
    <string name="sure_logout">Are you sure you want to logout?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="generic_error">Something went wrong, please try again later.</string>
    <string name="author">Author:</string>
    <string name="tags">Tags:</string>
    <string name="quote">Quote:</string>
    <string name="detail">Detail</string>

</resources>